arreglos de estilos por figura

--- a/figuras.html
+++ b/figuras.html
@@ -20,11 +20,11 @@
     <main>
         <section class="calculate">
             <!-- Cuadrado -->
-            <section class="main-cards">
+            <section class="main-cards  card-cuadrado">
                 <h2>Calcular <b>Cuadrado</b></h2>
                 <form action="">
                     <label for="InputCuadrado">Escribe cuánto mide un lado de tu cuadrado</label>
-                    <input id="InputCuadrado" type="text" placeholder="Lado">
+                    <input id="InputCuadrado" type="text" placeholder="Lado" alt="Ingresar lado del cuadrado">
                     <div class="buttons">
                         <button type="button" onclick="calcularPerimetroCuadrado()">Calcular Perímetro</button>
                         <button type="button" onclick="calcularAreaCuadrado()">Calcular Área</button>
@@ -32,11 +32,11 @@
                 </form>
             </section>
             <!-- Circulo -->
-            <section class="main-cards">
+            <section class="main-cards card-circulo">
                 <h2>Calcular <b>Circulo</b></h2>
                 <form action="">
                     <label for="InputCirculo">Escribe el radio del círculo</label>
-                    <input id="InputCirculo" type="text" placeholder="radio">
+                    <input id="InputCirculo" type="text" placeholder="radio" alt="ingresar radio del circulo">
                     <div class="buttons">
                         <button type="button" onclick="calcularCircunferenciaCirculo()">Calcular Circunferencia</button>
                         <button type="button" onclick="calcularAreaCirculo()">Calcular Área</button>
@@ -45,24 +45,24 @@
                 </form>
             </section>
             <!-- Triangulo -->
-            <section class="main-cards">
+            <section class="main-cards card-triangulo">
                 <h2>Área de un <b>Triángulo</b></h2>
                 <form action="">
                     <label for="InputTriangulo">Escribe cuánto mide la base y altura de tu triángulo</label>
-                    <input id="InputTrianguloBase" type="text" placeholder="Base">
-                    <input id="InputTrianguloAltura" type="text" placeholder="Altura">
+                    <input id="InputTrianguloBase" type="text" placeholder="Base" alt="Ingreasr base del triangulo">
+                    <input id="InputTrianguloAltura" type="text" placeholder="Altura" alt="Ingresar altura del triangulo">
                     <div class="buttons">
                         <button type="button" onclick="calcularAreaTriangulo()">Calcular Área</button>
                     </div>
                 </form>
             </section>
             <!-- Triangulo -->
-            <section class="main-cards">
+            <section class="main-cards card-triangulo">
                 <h2>Perímetro de <b>Triángulo</b> Isócel</h2>
                 <form action="">
                     <label for="InputTriangulo">Escribe cuánto mide un lado y la base del triángulo</label>
-                    <input id="InputTrianguloLado" type="text" placeholder="Lado">
-                    <input id="InputTrianguloBase" type="text" placeholder="Base">
+                    <input id="InputTrianguloLado" type="text" placeholder="Lado" alt="ingresar lado del triangulo">
+                    <input id="InputTrianguloBase" type="text" placeholder="Base" alt="ingresar base del triangulo">
                     <div class="buttons">
                         <button type="button" onclick="calcularPerimetroTriangulo()">Calcular Perímetro</button>
                     </div>
