se agrega boton calcular area de triangulo y estilos en cards y buttons

--- a/figuras.html
+++ b/figuras.html
@@ -44,18 +44,7 @@
                     </div>
                 </form>
             </section>
-            <!-- Triangulo -->
-            <section class="main-cards card-triangulo">
-                <h2>Área de un <b>Triángulo</b></h2>
-                <form action="">
-                    <label for="InputTriangulo">Escribe cuánto mide la base y altura de tu triángulo</label>
-                    <input id="InputTrianguloBase" type="text" placeholder="Base" alt="Ingreasr base del triangulo">
-                    <input id="InputTrianguloAltura" type="text" placeholder="Altura" alt="Ingresar altura del triangulo">
-                    <div class="buttons">
-                        <button type="button" onclick="calcularAreaTriangulo()">Calcular Área</button>
-                    </div>
-                </form>
-            </section>
+
             <!-- Triangulo -->
             <section class="main-cards card-triangulo">
                 <h2>Perímetro de <b>Triángulo</b> Isócel</h2>
@@ -65,6 +54,21 @@
                     <input id="InputTrianguloBase" type="text" placeholder="Base" alt="ingresar base del triangulo">
                     <div class="buttons">
                         <button type="button" onclick="calcularPerimetroTriangulo()">Calcular Perímetro</button>
+                        <button type="button" onclick="calcularAlturaTriangulo()">Calcular Altura</button>
+                    </div>
+                </form>
+            </section>
+
+            <!-- Triangulo -->
+            <section class="main-cards card-triangulo">
+                <h2>Área de un <b>Triángulo</b></h2>
+                <form action="">
+                    <label for="InputTriangulo">Escribe cuánto mide la base y altura de tu triángulo</label>
+                    <input id="InputTrianguloBase" type="text" placeholder="Base" alt="Ingreasr base del triangulo">
+                    <input id="InputTrianguloAltura" type="text" placeholder="Altura"
+                        alt="Ingresar altura del triangulo">
+                    <div class="buttons">
+                        <button type="button" onclick="calcularAreaTriangulo()">Calcular Área</button>
                     </div>
                 </form>
             </section>
